--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,93 @@
 [build]
+  # Build settings
   publish = "."
-  command = ""
+  command = "echo 'Static site - no build required'"
+
+[build.environment]
+  # Environment variables for build
+  NODE_VERSION = "18"
+
+# Redirect rules
+[[redirects]]
+  # Redirect landing subdomain to PowerPair page
+  from = "https://landing.admiralenergy.ai/*"
+  to = "https://admiralenergy.ai/powerpair.html"
+  status = 301
+  force = true
 
 [[redirects]]
+  # Handle form success
+  from = "/contact-success"
+  to = "/contact-success.html"
+  status = 200
+
+[[redirects]]
+  # Handle 404s with custom page
   from = "/*"
   to = "/404.html"
   status = 404
 
+# Headers for security and performance
 [[headers]]
   for = "/*"
   [headers.values]
+    # Security headers
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    
+    # Performance headers
+    X-DNS-Prefetch-Control = "on"
+
+[[headers]]
+  for = "/public/images/*"
+  [headers.values]
+    # Cache images for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/public/logos/*"
+  [headers.values]
+    # Cache logos for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    # Cache CSS for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    # Cache JS for 1 year
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Form handling
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = false
+  minify = false
+
+[build.processing.js]
+  bundle = false
+  minify = false
+
+[build.processing.html]
+  pretty_urls = true
+
+# Custom headers for specific paths
+[[headers]]
+  for = "/contact.html"
+  [headers.values]
+    # Ensure contact form works properly
+    X-Robots-Tag = "index, follow"
+
+# Edge functions (for future use)
+# [[edge_functions]]
+#   function = "admiral-chat"
+#   path = "/api/chat/*"
