fix(forms): add query parameter to form action and force=true redirects to bypass Netlify form handler

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,13 @@
 
 # Redirect rules
 [[redirects]]
+  # Force static serving of contact success page with query parameter
+  from = "/contact-success.html"
+  to = "/contact-success.html"
+  status = 200
+  force = true
+
+[[redirects]]
   # Redirect landing subdomain to PowerPair page
   from = "https://landing.admiralenergy.ai/*"
   to = "https://admiralenergy.ai/powerpair.html"
@@ -16,11 +23,11 @@
   force = true
 
 [[redirects]]
-  # Handle form success page (allow both /contact-success and /contact-success.html)
+  # Handle form success page alternate path
   from = "/contact-success"
   to = "/contact-success.html"
   status = 200
-  force = false
+  force = true
 
 [[redirects]]
   # Handle 404s with custom page
