--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,10 @@
   # Environment variables for build
   NODE_VERSION = "18"
 
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
 # Redirect rules
 [[redirects]]
   # Redirect landing subdomain to PowerPair page
