--- a/netlify.toml
+++ b/netlify.toml
@@ -20,8 +20,9 @@
   force = true
 
 [[redirects]]
-  # Force static serving of /thank-you.html (prevent Netlify form handler interception)
-  from = "/thank-you.html"
+  # Force static serving of /thank-you.html (and variants) to prevent Netlify form handler interception
+  # Keep this rule ahead of the catch-all redirect
+  from = "/thank-you.html*"
   to = "/thank-you.html"
   status = 200
   force = true
