--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,34 @@
 # Local Netlify folder
-.netlify
+.netlify/
 
 # Environment variables
 .env
+.env.local
+.env.*.local
 
-# Archive folders
+# Node modules
+node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+
+# Editor directories
+.vscode/settings.json
+.idea/
+
+# Staging and archive folders (local only - never commit)
 /NewFiles/
 /_archive/
+
+# Build outputs (if needed in future)
+dist/
+build/
