--- a/netlify.toml
+++ b/netlify.toml
@@ -20,16 +20,9 @@
   force = true
 
 [[redirects]]
-  # Serve the thank-you page for /thank-you.html* (with query strings)
-  from = "/thank-you.html*"
-  to = "/thank-you/"
-  status = 200
-  force = true
-
-[[redirects]]
   # Serve the thank-you page for /thank-you* (with or without query strings)
   from = "/thank-you*"
-  to = "/thank-you/"
+  to = "/thank-you.html"
   status = 200
   force = true
 
