Add no-cache headers for HTML files to prevent stale content
- HTML files now have Cache-Control: max-age=0, must-revalidate
- Ensures Netlify CDN serves fresh HTML content
- Fixes issue where ITC banner removal wasn't visible due to caching

--- a/netlify.toml
+++ b/netlify.toml
@@ -96,6 +96,12 @@
     # Cache JS for 1 year
     Cache-Control = "public, max-age=31536000, immutable"
 
+[[headers]]
+  for = "*.html"
+  [headers.values]
+    # Don't cache HTML - always serve fresh content
+    Cache-Control = "public, max-age=0, must-revalidate"
+
 # Form handling
 [build.processing]
   skip_processing = false
