--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,41 @@
-# Local Netlify folder
-.netlify/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Node modules
-node_modules/
+# testing
+/coverage
 
-# Logs
-*.log
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# OS files
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
+# env files (can opt-in for committing if needed)
+.env*
 
-# Editor directories
-.vscode/settings.json
-.idea/
+# vercel
+.vercel
 
-# Staging and archive folders (local only - never commit)
-/NewFiles/
-/_archive/
-
-# Build outputs (if needed in future)
-dist/
-build/
+# typescript
+*.tsbuildinfo
+next-env.d.ts
