--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "admiralenergy-website",
-  "version": "1.0.0",
-  "description": "Admiral Energy static website with Netlify serverless functions",
+  "name": "next-site",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "netlify dev",
-    "build": "echo 'Static site - no build required'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
   },
   "dependencies": {
-    "twilio": "^5.0.0"
+    "@netlify/plugin-nextjs": "^5.15.8",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.575.0",
+    "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "reading-time": "^1.5.0"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": ">=18"
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
