--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-site",
+  "name": "admiralenergy-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,9 +16,11 @@
     "next-mdx-remote": "^6.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
+    "@netlify/functions": "^5.1.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
